syntax = "proto3";

package api.sigma.v1;

option go_package = "kratos_study/api/sigma/v1;v1";
option java_multiple_files = true;
option java_package = "api.sigma.v1";

service Album {
	rpc CreateAlbum (CreateAlbumRequest) returns (CreateAlbumReply);
	rpc UpdateAlbum (UpdateAlbumRequest) returns (UpdateAlbumReply);
	rpc DeleteAlbum (DeleteAlbumRequest) returns (DeleteAlbumReply);
	rpc GetAlbum (GetAlbumRequest) returns (GetAlbumReply);
	rpc ListAlbum (ListAlbumRequest) returns (ListAlbumReply);
}

message CreateAlbumRequest {}
message CreateAlbumReply {}

message UpdateAlbumRequest {}
message UpdateAlbumReply {}

message DeleteAlbumRequest {}
message DeleteAlbumReply {}

message GetAlbumRequest {}
message GetAlbumReply {}

message ListAlbumRequest {}
message ListAlbumReply {}